Move compass to the corner. Put it in a Viewport so it appears on top of the bottle. Support lighting with linear tangent spaces.

--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ Form factors
 - Browsers
 - Screen size/resolution -- testable in browser
 - Input mechanisms
+- Handle context lost
 
 Questions:
 - Any better way to indicate current orientation?
